--- a/index.html
+++ b/index.html
@@ -1036,8 +1036,8 @@
 
     <!-- Contact us section -->
         <section class="contact-top mt-[40px] sm:mt-[100px]">
-            <div class="w-[90%] m-auto overflow-x-hidden flex flex-col  gap-7 sm:gap-10">
-
+            <div class="w-[90%] m-auto overflow-y-hidden overflow-x-hidden  flex flex-col  gap-7 sm:gap-10">
+ 
                 <div class="contact-top flex flex-col sm:flex-row gap-3 sm:gap-10">
                     <h2
                       class="bg-[#b9ff66] text-2xl md:text-3xl rounded-[10px] w-fit p-1 leading-0"
