--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     />
   </head>
   <body>
+
+
     <header
       class="bg-white/10 backdrop-blur-md border border-white/20 shadow-md sticky top-0 left-0 z-40"
     >
@@ -139,7 +141,7 @@
 
 
 
-        
+
       </div>
     </header>
 
@@ -987,6 +989,12 @@ We streamline supply chains with secure, end-to-end digital solutions—from cus
 
 
 
+    <!-- Modal html start -->
+  
+
+    <!-- Modal html finish -->
+
+
 
 
     <script>
@@ -1003,7 +1011,6 @@ We streamline supply chains with secure, end-to-end digital solutions—from cus
       });
     </script>
 
-    VANTA.JS va THREE.JS 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds.min.js"></script>
 
